# single_inverted_pendulum

./: .gitignore  README.md
src/log/: latest_list
src/single_inverted_pendulum/: CMakeLists.txt  package.xml
src/single_inverted_pendulum/config/: single_pendulum_swingup_params.yaml
src/single_inverted_pendulum/launch/: distributed_controller.launch.py  swingup_controller.launch.py
src/single_inverted_pendulum/scripts/: disturbance_node.py  dummy_script.py  energy_swingup_node.py  lqr_stabilizer_node.py  manager_node.py  single_pendulum_swingup_controller.py
src/single_inverted_pendulum/src/: cpp_node.cpp
src/single_inverted_pendulum_description/: CMakeLists.txt  model.config  package.xml
src/single_inverted_pendulum_description/launch/: display_launch.py
src/single_inverted_pendulum_description/robot/visual/: gazebo_full.xacro.BACKUP  gazebo_single.xacro  pendulum_params.xacro  robot_material.xacro  single_inverted_pendulum.xacro
src/single_inverted_pendulum_description/scripts/: dummy_script.py
src/single_inverted_pendulum_description/src/: cpp_node.cpp
src/single_inverted_pendulum_simulation/: CMakeLists.txt  package.xml
src/single_inverted_pendulum_simulation/config/: controller_single.yaml
src/single_inverted_pendulum_simulation/launch/: simulation_single_launch.py
src/single_inverted_pendulum_simulation/scripts/: dummy_script.py
src/single_inverted_pendulum_simulation/src/: cpp_node.cpp
src/single_inverted_pendulum_simulation/worlds/: empty.sdf
